tests/fail/03_no_main.lang
функция тест() : целое {
    вернуть 1;
}
// Ошибка рантайма: Точка входа 'main' не найдена
